--- a/onedayrun-gpt5mt/index.html
+++ b/onedayrun-gpt5mt/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OneDay.run - Ephemeral Project Workspace</title>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='64' height='64' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='12' fill='%236366f1'/%3E%3Ctext x='50%25' y='58%25' text-anchor='middle' font-size='28' font-family='Arial, Helvetica, sans-serif' fill='white'%3EOD%3C/text%3E%3C/svg%3E">
     <style>
         * {
             margin: 0;
